# device_application

./: .gitignore  README.md  pubspec.yaml
device_application_documentation/: README.md  pubspec.yaml
device_application_documentation/android/app/: build.gradle
device_application_documentation/ios/Runner/: Info.plist
device_application_documentation/lib/: documentation_main.dart
device_application_documentation/linux/: CMakeLists.txt  my_application.cc
device_application_documentation/macos/Runner.xcodeproj/: project.pbxproj
device_application_documentation/macos/Runner/Configs/: AppInfo.xcconfig
device_application_documentation/test/: widget_test.dart
device_application_documentation/web/: index.html  manifest.json
device_application_documentation/windows/: CMakeLists.txt
device_application_documentation/windows/runner/: Runner.rc  main.cpp
native_lib/: CMakeLists.txt  readme.md
package/device_application/: README.md  analysis_options.yaml  pubspec.yaml
package/device_application/example/: pubspec.yaml
package/device_application/example/lib/: apps_events.dart  apps_list.dart  main.dart
package/device_application/lib/: flutter.dart
package/device_application/lib/core/: core.dart  device_application_core.dart
package/device_application_flutter/: CHANGELOG.md  LICENSE  pubspec.yaml
package/device_application_flutter/android/: .gitignore  build.gradle  settings.gradle
package/device_application_flutter/ios/: .gitignore  device_application_flutter_plugin.podspec
package/device_application_flutter/lib/: device_application_flutter.dart
package/device_application_flutter/linux/: CMakeLists.txt  device_application_flutter_plugin.cc  device_application_flutter_plugin_private.h
package/device_application_flutter/macos/: device_application_flutter_plugin.podspec
package/device_application_flutter/windows/: .gitignore  CMakeLists.txt  device_application_flutter_plugin.cpp  device_application_flutter_plugin.h  device_application_flutter_plugin_c_api.cpp
test/: device_application_test.dart
(+26 files in other folders)
